<resources>
    <!-- //MAPS_API_KEY=AIzaSyDDqHH7cDDp4J8eM1zb6SbYFa1Npi474yE-->
    <string name="app_name">Feed The Need</string>
    <string name="MAPS_API_KEY">AIzaSyBGx7fGc6cYOR4tVHN51l5WHW3FuWXZTMI</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="add_event">Add Event</string>
    <string name="submit">Submit</string>
    <string name="event_host">Event Host</string>
    <string name="event_name">Event Name</string>
    <string name="description">Description</string>
    <string name="event_date">Event Date</string>
    <string name="food_type">Type of food</string>
    <string name="parti_no">No of Participants</string>
    <string name="enter_description_here">Enter Description here</string>
    <string name="food_type_here">Enter Food Type</string>
    <string name="enter_number_of_participants">Enter number of participants</string>
    <string name="resturant">Restaurant</string>
    <string name="volunteer">Volunteer</string>
    <string name="participate">Participate</string>
    <string name="home">Home</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="events">Events</string>
    <string name="search_here">Search here</string>
    <string name="next">Next</string>
    <string name="login_with_google">Login with Google</string>
    <string name="logout">Logout</string>
    <string name="no_of_star">No of Star</string>
    <string name="comment">Comment</string>
    <string name="user_additional_information_confirmation">User Additional Information Confirmation</string>
    <string name="display_name">Display Name</string>
    <string name="continue_as_a_restaurant">Continue as a Restaurant</string>
    <string name="enter_message_here">Enter message here</string>
    <string name="send">Send</string>
</resources>