<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_180sdp" />
    <LinearLayout
        android:layout_marginTop="@dimen/_5sdp"
        android:id="@+id/SliderDots"
        android:layout_below="@+id/view_pager"
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/lay1"
        android:layout_below="@+id/SliderDots"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/_5sdp"
        android:padding="@dimen/_10sdp">

    <TextView
        android:id="@+id/event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/event_name"
        android:textColor="@color/black"
        android:textSize="@dimen/_30ssp"
        android:textStyle="bold"
        android:gravity="center"/>
    <TextView
        android:id="@+id/event_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/food_type"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        android:gravity="center"/>
    <TextView
        android:id="@+id/date_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="Date and Time"
        android:textColor="@color/mainbg"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        android:gravity="center"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/description"
            android:textColor="@color/grey"
            android:textSize="@dimen/_14ssp" />
    </LinearLayout>
    <fragment
        android:id="@+id/map"
        android:layout_below="@+id/lay1"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/_10sdp"
        android:layout_height="@dimen/_250sdp"
        tools:context=".MapsActivity" />
    <LinearLayout
        android:layout_below="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_5sdp"
        android:padding="@dimen/_10sdp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_margin="@dimen/_5sdp"
                android:id="@+id/chat_volunteer"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp"
                android:background="@drawable/button_bg"
                >
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/chatt"/>
                <TextView
                    android:gravity="center"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:textColor="@color/mainbg"
                    android:textSize="@dimen/_16sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/volunteer"/>
            </LinearLayout>
            <LinearLayout
                android:layout_margin="@dimen/_5sdp"
                android:id="@+id/chat_restaurant"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp"
                android:background="@drawable/button_bg"
                >
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/chatt"/>
                <TextView
                    android:gravity="center"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:textColor="@color/mainbg"
                    android:textSize="@dimen/_16sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resturant"/>
            </LinearLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_margin="@dimen/_5sdp"
            android:id="@+id/event_participant"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp"
            android:background="@drawable/button_bg"
            >
            <ImageView
                android:layout_gravity="center"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/event"/>
            <TextView
                android:gravity="center"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:textColor="@color/mainbg"
                android:textSize="@dimen/_16sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/participate"/>
        </LinearLayout>
        <LinearLayout
            android:layout_margin="@dimen/_5sdp"
            android:id="@+id/bevolunteer"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp"
            android:background="@drawable/button_bg"
            >
            <ImageView
                android:layout_gravity="center"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/group"/>
            <TextView
                android:gravity="center"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:textColor="@color/mainbg"
                android:textSize="@dimen/_16sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Be Volunteer"/>
        </LinearLayout>
    </LinearLayout>
        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_margin="@dimen/_5sdp"
                android:id="@+id/btnSubmit"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp"
                android:background="@drawable/button_bg"
                >
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/rating"/>
                <TextView
                    android:gravity="center"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:textColor="@color/mainbg"
                    android:textSize="@dimen/_16sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Event"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>

</ScrollView>